objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>A2Z_CoID__c</fullName>
        <formula>BLANKVALUE(Account.A2Z_CoID__c, "NONE")</formula>
        <label>A2Z CoID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A2Z_Integration_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A2Z Integration Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>A2Z_Password__c</fullName>
        <formula>Account.A2Z_Password__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A2Z Password</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountExternalID__c</fullName>
        <formula>Account.A2Z_CoID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountExternalID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNameFirstChar__c</fullName>
        <formula>IF(
    BEGINS(upper(Account.Name), "THE "),
    Upper(RIGHT(LEFT(Account.Name,5),1)),
    Upper(LEFT(Account.Name,1))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountNameFirstChar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Close_Date__c</fullName>
        <label>Actual Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Marketing_Services__c</fullName>
        <label>Additional Marketing Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approved_For_A2Z__c</fullName>
        <formula>Account.Approved_For_A2Z__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reviewed by Billing Coordinator?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Markt_Ops__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assigned to Markt Ops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoCloseDate__c</fullName>
        <description>Time stamp entered by Informatica when it auto-closes the opportunity</description>
        <label>AutoCloseDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BillingCountryandStateCode__c</fullName>
        <formula>TEXT(Account.BillingCountryCode)+'-'+ TEXT(Account.BillingStateCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BillingCountryandStateCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country_Code__c</fullName>
        <formula>BLANKVALUE( NULLVALUE(TEXT(Account.BillingCountryCode),'NULL'),'NULL')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Code__c</fullName>
        <formula>BLANKVALUE( NULLVALUE(TEXT(Account.BillingStateCode),'NULL'),'NULL')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing State Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booked_NSF__c</fullName>
        <description>Total NSF from a2z</description>
        <label>Booked NSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booked_Revenue__c</fullName>
        <description>Total Order Amount from a2z</description>
        <label>Booked Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booth_Application_Date__c</fullName>
        <label>Booth Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booth_Image__c</fullName>
        <label>Booth Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Booth_Requests__c</fullName>
        <label>Booth Location &amp; Special Requests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Event__r.Show__r.Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_for_Products_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call for Products Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Short_Description__c</fullName>
        <formula>Campaign.Short_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Short Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reasons__c</fullName>
        <label>Cancellation Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attendees Not a Match to Target Market</fullName>
                </value>
                <value>
                    <fullName>Bad Experience with Emerald</fullName>
                </value>
                <value>
                    <fullName>Bad Experience with Vendor(GES/Freeman)</fullName>
                </value>
                <value>
                    <fullName>Conflict with other show</fullName>
                </value>
                <value>
                    <fullName>Cost/Budget</fullName>
                </value>
                <value>
                    <fullName>Don't Exhibit at Trade Shows</fullName>
                </value>
                <value>
                    <fullName>Exhibit at Other Show(s) Only</fullName>
                </value>
                <value>
                    <fullName>Financial/payment problem</fullName>
                </value>
                <value>
                    <fullName>Not Enough Buyers/Leads</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Product not available</fullName>
                </value>
                <value>
                    <fullName>Timing Conflict</fullName>
                </value>
                <value>
                    <fullName>Undesirable Booth Location</fullName>
                </value>
                <value>
                    <fullName>Undesirable Location(City/Venue)</fullName>
                </value>
                <value>
                    <fullName>Visa denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConvertedAccountId__c</fullName>
        <label>ConvertedAccountId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Create Task when loading opportunity using data loader.</description>
        <label>Create Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Exhibitor_Classification__c</fullName>
        <label>Current Exhibitor Classification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Exhibitor_Retention__c</fullName>
        <label>Current Exhibitor Retention</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_ID__c</fullName>
        <externalId>true</externalId>
        <label>DM_ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Days_to_Forecast_Close_Date__c</fullName>
        <formula>CloseDate - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Forecast Close Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_close__c</fullName>
        <formula>/*CloseDate - Datevalue(CreatedDate)
IF((ISPICKVAL( StageName, "Lost") || ISPICKVAL(StageName, "Sold")),(CloseDate - DateVALUE(CreatedDate)    ),Null)
*/
Actual_Close_Date__c - DateVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EE_Record_Type__c</fullName>
        <formula>IF( TEXT(Product__c)= $CustomMetadata.Product__mdt.VIP_Registration.MasterLabel, $CustomMetadata.EE_Record_Type__mdt.Attendee.DeveloperName,  
IF( TEXT(Product__c)=  $CustomMetadata.Product__mdt.Conference_Registration.MasterLabel, $CustomMetadata.EE_Record_Type__mdt.Attendee.DeveloperName,  
IF(TEXT(Product__c)=$CustomMetadata.Product__mdt.Speaker.MasterLabel, $CustomMetadata.EE_Record_Type__mdt.Attendee.DeveloperName, $CustomMetadata.EE_Record_Type__mdt.Exhibitor.DeveloperName
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailSubject_NewOwner__c</fullName>
        <formula>IF(pi_ee_score__c &gt; 0, "NEW Pardot Opportunity assigned to you!", "Opportunity assigned to you!")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailSubject_NewOwner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Used to track subscriptions for Elastic Digital Market</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Booth_Last_Date__c</fullName>
        <formula>Event__r.Booth_Last_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Booth Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Code__c</fullName>
        <formula>Event__r.Event_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <formula>Event__r.Name</formula>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Non_Booth_Last_Date__c</fullName>
        <formula>Event__r.Non_Booth_Last_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Non-Booth Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Year__c</fullName>
        <formula>Text(Event__r.Event_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exhibitor_Console_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exhibitor Console Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Account_ID_Text__c</fullName>
        <formula>BLANKVALUE(Account.A2Z_CoID__c, "NONE")</formula>
        <label>A2Z Company ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_NSF__c</fullName>
        <label>Forecast NSF</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecast_Revenue__c</fullName>
        <label>Forecast Revenue</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Products__c</fullName>
        <description>Number of Forecast products - Sum of Quantity Field from Product</description>
        <label># of Forecasted Products</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Formatted_Date__c</fullName>
        <formula>TEXT(MONTH(DATEVALUE( CreatedDate )))+"/" +TEXT(DAY(DATEVALUE(CreatedDate)))+"/" +TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goldmine_Created_Date__c</fullName>
        <label>Goldmine Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goldmine_Objection_Code__c</fullName>
        <label>Goldmine Objection Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GuideIsClicked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GuideIsClicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IQ_Source_Id__c</fullName>
        <label>IQ Source Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IgnoreValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOwner__c</fullName>
        <formula>OwnerId = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jury_Comments__c</fullName>
        <label>Jury Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jury_Recommended_Sections__c</fullName>
        <label>Recommended Sections</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accent on Design®</fullName>
                </value>
                <value>
                    <fullName>Artisan Resource</fullName>
                </value>
                <value>
                    <fullName>Baby + Child</fullName>
                </value>
                <value>
                    <fullName>Distinctive Living</fullName>
                </value>
                <value>
                    <fullName>Emerging Maker Platform</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Handmade® Designer Maker</fullName>
                </value>
                <value>
                    <fullName>Handmade® Global Design</fullName>
                </value>
                <value>
                    <fullName>Home Furnishings + Textiles</fullName>
                </value>
                <value>
                    <fullName>New Exhibitor Pavilion</fullName>
                </value>
                <value>
                    <fullName>Personal Accessories</fullName>
                </value>
                <value>
                    <fullName>Personal Care + Wellness</fullName>
                </value>
                <value>
                    <fullName>Tabletop + Gourmet Housewares</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jury_Result__c</fullName>
        <label>Jury Result</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AOD - Not Recommended</fullName>
                </value>
                <value>
                    <fullName>AOD - Pre-juried Not Recommended</fullName>
                </value>
                <value>
                    <fullName>AOD - Recommended</fullName>
                </value>
                <value>
                    <fullName>DMP - Not Recommended</fullName>
                </value>
                <value>
                    <fullName>DMP - Recommended</fullName>
                </value>
                <value>
                    <fullName>HDM - Not Recommended</fullName>
                </value>
                <value>
                    <fullName>HDM - Pre-juried Not Recommended</fullName>
                </value>
                <value>
                    <fullName>HDM - Recommended</fullName>
                </value>
                <value>
                    <fullName>HGD - Not Recommended</fullName>
                </value>
                <value>
                    <fullName>HGD - Pre-juried Not Recommended</fullName>
                </value>
                <value>
                    <fullName>HGD - Recommended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jury_Score_AonD__c</fullName>
        <label>Jury Score (Accent on Design)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jury_Score_Handmade__c</fullName>
        <label>Jury Score (Handmade)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastOpptyChangedDays__c</fullName>
        <formula>(now()-LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastOpptyChangedDays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <label>Lead Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Details__c</fullName>
        <label>Loss Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>Event__r.Show__r.Market__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSF_Weighted__c</fullName>
        <formula>IF( Probability  &gt;= 0.5, Forecast_NSF__c  *   Probability, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NSF Weighted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSF_Weighted_test__c</fullName>
        <label>NSF Weighted test</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Named_Account_Executive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Named Account Executive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Opportunity__c</fullName>
        <formula>IF(LastModifiedDate=Owner_Changed__c,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objection_Code__c</fullName>
        <label>Objection Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Attendee Prospect</fullName>
                </value>
                <value>
                    <fullName>Attendees Not a Match to Target Market</fullName>
                </value>
                <value>
                    <fullName>Bad Experience with Emerald</fullName>
                </value>
                <value>
                    <fullName>Bad experience with General Show Contractor</fullName>
                </value>
                <value>
                    <fullName>Co-Exhibitor</fullName>
                </value>
                <value>
                    <fullName>Conflict - Business</fullName>
                </value>
                <value>
                    <fullName>Conflict - Personal</fullName>
                </value>
                <value>
                    <fullName>Conflict with other show</fullName>
                </value>
                <value>
                    <fullName>Content not as good as in the past</fullName>
                </value>
                <value>
                    <fullName>Content not relevant</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>COVID- Health Concerns</fullName>
                </value>
                <value>
                    <fullName>COVID- No Budget</fullName>
                </value>
                <value>
                    <fullName>COVID- Travel Restrictions</fullName>
                </value>
                <value>
                    <fullName>Customer is Out of Business</fullName>
                </value>
                <value>
                    <fullName>Customer not a fit</fullName>
                </value>
                <value>
                    <fullName>Customer prefers another Emerald Show</fullName>
                </value>
                <value>
                    <fullName>Customer Product is not Available</fullName>
                </value>
                <value>
                    <fullName>Does not exhibit at Trade Shows</fullName>
                </value>
                <value>
                    <fullName>Do Not Sell – Undesirable Exhibitor</fullName>
                </value>
                <value>
                    <fullName>Duplicate Opportunity</fullName>
                </value>
                <value>
                    <fullName>Exhibit at Other Show(s) Only</fullName>
                </value>
                <value>
                    <fullName>Exhibitors / Suppliers not relevant</fullName>
                </value>
                <value>
                    <fullName>Financial/payment problem</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Perceived lack of ROI (Return on Investment)</fullName>
                </value>
                <value>
                    <fullName>Perceived not enough Buyers/Leads</fullName>
                </value>
                <value>
                    <fullName>Potential Exhibitor participating as an Attendee</fullName>
                </value>
                <value>
                    <fullName>Previously attended - not beneficial</fullName>
                </value>
                <value>
                    <fullName>Repetitive Content</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Op_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Summary__c</fullName>
        <formula>HYPERLINK('/' &amp; Id , Name, '_blank') &amp; BR() &amp; 'Stage: ' &amp; TEXT(StageName) &amp; BR() &amp; 'Total Forecasted Amount: $' &amp; TEXT( Total_Forecasted_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Changed__c</fullName>
        <label>Owner Changed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pardot_Task_ID__c</fullName>
        <label>Pardot Task ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pavilion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pavilion</label>
        <referenceTo>Pavilion__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Exhibitor_Classification__c</fullName>
        <label>Previous Exhibitor Classification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Exhibitor_Retention__c</fullName>
        <label>Previous Exhibitor Retention</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Image_1__c</fullName>
        <label>Product Image 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Image_2__c</fullName>
        <label>Product Image 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Image_3__c</fullName>
        <label>Product Image 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Booth</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>List rental</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>TR Package</fullName>
                </value>
                <value>
                    <fullName>Speaker</fullName>
                </value>
                <value>
                    <fullName>VIP Registration</fullName>
                </value>
                <value>
                    <fullName>Conference Registration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Weighted__c</fullName>
        <formula>Forecast_Revenue__c  *   Probability/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Weighted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Contact</fullName>
                </value>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>Booth Contact</fullName>
                </value>
                <value>
                    <fullName>Contract Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Row__c</fullName>
        <label>RowId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Set__c</fullName>
        <formula>BLANKVALUE(SubExpo__r.SubShow__r.Rule_Set__c,Event__r.Show__r.Rule_Set__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <formula>Event__r.Show__r.Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box field used for sending email for single email for AE. This field set in Import file manually while importing the opportunities.</description>
        <label>SendEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Should_Ignore_Assignment_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Should Ignore Assignment Rule?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowObjectID__c</fullName>
        <formula>Event__r.Show__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ShowObjectID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowObject__c</fullName>
        <formula>Event__r.Show__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ShowObject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_OTC_Guide__c</fullName>
        <formula>if(ISPICKVAL(StageName, "Lost") || ISPICKVAL(StageName, "Sold")||ISPICKVAL(StageName, "Cancelled")||ISPICKVAL(StageName, "Verbal Commitment/Contract Sent/Pending")||  Event__r.Show__r.Billing_Coordinator__c=NULL, False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show_OTC_Guide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <formula>Event__r.Show__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StageBeforeAutoClose__c</fullName>
        <description>Save the current opportunity before we close</description>
        <label>Stage Before AutoClose</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_order__c</fullName>
        <formula>CASE(Type,
  "No Contact Attempted", "1 No Contact Attempted",
  "Contact Attempted/Not Made", "2 Contact Attempted/Not Made",
  "Contact Made/Discovery", "3 Contact Made/Discovery",
  "Contact Made/Early Discussion", "4 Contact Made/Early Discussion",
  "Interested/Oppty Seriously Discussed", "5 Interested/Oppty Seriously Discussed",
  "High Interest/Specific Details Reviewed", "6 High Interest/Specific Details Reviewed",
  "Verbal Commitment/Contract Sent/Pending","7 Verbal Commitment/Contract Sent/Pending",
  "Sold","8 Sold",
  "Lost","9 Lost",
  "Cancelled","10 Cancelled",
"11")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Used to track subscriptions for Elastic Digital Market</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubExpoObjectID__c</fullName>
        <formula>SubExpo__r.Show__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubExpoObjectID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubExpo_Name__c</fullName>
        <formula>IF(OR(ISNULL(SubExpo__c ),isblank(SubExpo__c)) , '_None', SubExpo__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubExpo Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubExpo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SubExpo</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SubExpo__c.Event__c</field>
                <operation>equals</operation>
                <valueField>$Source.Event__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SubExpo__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubShow_Name__c</fullName>
        <formula>IF(OR(ISNULL(SubExpo__c ),isblank(SubExpo__c)) , '_None', SubExpo__r.SubShowName__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubShow Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubShow__c</fullName>
        <formula>SubExpo__r.SubShow__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubShow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_of_Forecast_Amount__c</fullName>
        <label>Sum of Forecast Amount</label>
        <summarizedField>PackageForecast__c.ForecastedAmount__c</summarizedField>
        <summaryForeignKey>PackageForecast__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>